test/functions/ferguson/ref-pair/ref-to-const-array-error.good
ref-to-const-array-error.chpl:1: In function 'foo':
ref-to-const-array-error.chpl:2: error: Cannot set a non-const reference to a const variable.
